network-policy/ns-bar.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bar
  labels:
    ns: bar
spec: {}
status: {}
