network-policy/deployment-nginx-bar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-bar
  name: nginx-bar
  namespace: bar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-bar
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-bar
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
