network-policy/deployment-nginx-foo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-foo
  name: nginx-foo
  namespace: foo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-foo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-foo
    spec:
      containers:
      - image: nginx
        name: nginx
        resources: {}
status: {}
