network-policy/pod-netshoot-foo.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: netshoot-foo
  name: netshoot-foo
  namespace: foo
spec:
  containers:
  - image: nicolaka/netshoot
    name: netshoot-foo
    command: ['sh', '-c', 'while true; do sleep 3600; done']
