network-policy/network-policy-nginx-foo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-foo-nginx
  namespace: foo
spec:
  podSelector:
    matchLabels:
      app: nginx-foo
  # policyTypes:
  #   - "Ingress"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          run: netshoot-foo
    # - namespaceSelector:
    #     matchLabels:
    #       ns: foo
